
Change Log

2016-11-30
	Upgrade to S9core Mk III. (s9core.*)
	s9_make_integer() will now return pre-allocated objects for some
	common values (0, 1, 2, 10). (Thanks, David Person!)
	Added type_tag() accessor.
2016-08-23
	The LENGTH fix of 2014-12-06 got reverted somewhere along the way.
	Re-fixed. (s9.c)
2016-08-05
	Upgrade to S9core Mk II. (s9.c, s9*.h)
	Added -e (eval) and -r (run) command line arguments. (s9.c)
2015-11-19
	real_ceil(), real_floor(), real_trunc() could fail when being
	passed an integer. Thanks, Alexander Shendi! (s9core.c)
2015-11-17
	Added real_power() function to s9core, added EXPT primitive
	(unused, though; the Scheme version is faster). (s9core.[ch])
2015-11-08
	S9core: added the open_input_string(), close_input_string(),
	and port_eof() functions. (s9core.[ch])
	S9core: fixed some function types (mostly port-related), made
	readc() and reject() functions (previously macros). (s9core.[ch])
	Updated the S9core manual. (s9core.tr)
	Fixed a potential GC leak in string_to_bignum(). (s9core.c)
2015-08-10
	Fix: S9core: make_vector() overwrote unallocated memory. (s9core.c)
	(This bug did *not* affect the S9 interpreter!)
2015-07-14
	Made APROPOS find extension procedures. (contrib/)
2015-07-13
	Adapted S9HELP to the new help folder structure. (prog/)
	Renamed extension directories to reflect their names:
	ext/unix --> ext/sys-unix, ext/plan9 --> ext/sys-plan9.
	Modified install scripts for new help structure.
2015-07-12
	Renamed NETWORK extension to NET-UNIX. (ext/unix/)
	Moved portable procedures from ext/ to lib/.
	Re-structured help folder: moved extension procedures to separate
	directories. (help/)
	Made HELP find only procedures of extensions that are actually
	available. (contrib/)
2015-07-09
	Added add_image_vars() function to S9core. (s9core.*)
	Cleaned up S9 bignum <-> C int conversion. (ext/plan9/)
	Fixed some bugs in sys_convD2M(). (ext/plan9/)
	Added DIR structure to Plan 9 extension. (ext/plan9/)
2015-07-07