@@ -211,10 +211,10 @@
 	patches, bug reports, suggestions, hardware, access to hardware,
 	etc:
 
-	Arun Srinivasan, Bakul Shah, Barak Pearlmutter, Blake McBride,
-	Bsamograd (reddit), David Person, Dig1 (reddit), Dirk Lutzebaeck,
-	Doug Currie, Mario Deilmann, Masaru KIMURA, Nullbuilt0 (reddit),
-	Ray Lai, Torsten Leibold, Yi Dai,
+	Alexander Shendi, Arun Srinivasan, Bakul Shah, Barak Pearlmutter,
+	Blake McBride, Bsamograd (reddit), David Person, Dig1 (reddit),
+	Dirk Lutzebaeck, Doug Currie, Mario Deilmann, Masaru KIMURA,
+	Nullbuilt0 (reddit), Ray Lai, Torsten Leibold, Yi Dai,
 	and the Super Dimension Fortress (SDF.ORG).
 
 
