@@ -1,6 +1,6 @@
 49781 1 ./TODO
 37188 15 ./s9core.h
-50449 94 ./s9.c
+30112 94 ./s9.c
 20304 1 ./ABOUT
 23230 80 ./s9core.tr
 160 35 ./s9.scm
@@ -17,7 +17,7 @@
 15950 5 ./contrib/draw-tree.scm
 54266 2 ./contrib/prolog-test.scm
 17877 2 ./contrib/zebra.scm
-23825 18 ./contrib/s9sos.scm
+51837 18 ./contrib/s9sos.scm
 61572 29 ./contrib/s9sos.txt
 52885 24 ./contrib/scm2html.scm
 64650 3 ./contrib/scheme.css
@@ -610,19 +610,19 @@
 20795 1 ./util/pagetail
 16595 1 ./util/pagehead
 55880 2 ./util/procedures.scm
-27514 2 ./util/blurb
+24790 2 ./util/blurb
 20920 1 ./util/mktoc.sed
 31056 3 ./util/book
 48144 1 ./util/s9.rc
 41741 13 ./util/fix-help-files
-13627 8 ./README
-1332 8 ./Makefile
+15382 8 ./README
+12710 8 ./Makefile
 48690 1 ./config.scm
 43017 1 ./configure
 49810 2 ./mkfile
 11686 16 ./s9.1
-64403 80 ./CHANGES
-7387 8 ./s9import.h
+21187 80 ./CHANGES
+55264 8 ./s9import.h
 23969 9 ./MASCOT.png
 20482 2 ./README.s9core
 55250 1 ./s9ext.h
